apps/hello-world/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hello-world
  labels:
    managment.aostrom.net/purpose: testing
    aostrom.net/team: managment
