apps/hello-world/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  namespace: hello-world
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt"
    ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: contour
  tls:
    - hosts:
        - icecreamtruck.lol
      secretName: icecreamtruck-tls
  rules:
    - host: icecreamtruck.lol
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: hello-world
                port:
                  name: http
